<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CourseAddFragment">


    <TextView
        android:id="@+id/course_to_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditTextStyle" />

    <EditText
        android:id="@+id/change_short_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_short_desc"
        android:inputType="text"
        style="@style/CourseIdEditTextStyle" />

    <EditText
        android:id="@+id/change_long_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_long_desc"
        android:inputType="text"
        style="@style/CourseIdEditTextStyle" />

    <EditText
        android:id="@+id/change_prereqs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_prereqs"
        android:inputType="text"
        style="@style/EditTextStyle" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/btn_submit"
        style="@style/uwButtonStyle" />



</LinearLayout>